# cw_serv

./: README.md
install/: local_setup.sh  setup.sh
install/action_interface/include/action_interface/action_interface/action/: cmd.hpp
install/action_interface/include/action_interface/action_interface/action/detail/: cmd__builder.hpp  cmd__functions.c  cmd__rosidl_typesupport_fastrtps_cpp.hpp  cmd__rosidl_typesupport_introspection_c.h  cmd__struct.h  cmd__type_support.h
install/action_interface/local/lib/python3.10/dist-packages/action_interface/: _action_interface_s.ep.rosidl_typesupport_c.c
install/action_interface/local/lib/python3.10/dist-packages/action_interface-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/action_interface/local/lib/python3.10/dist-packages/action_interface/action/: _cmd.py
install/action_interface/share/action_interface/: package.sh
install/action_interface/share/action_interface/action/: Cmd.action  Cmd.idl
install/cw_serv/share/cw_serv/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cw_serv/share/cw_serv/cmake/: cw_servConfig.cmake
install/cw_serv/share/cw_serv/launch/: cw_serv_launch.py
install/cw_serv/share/cw_serv/launch/settings_for_launch_file/: main_settings.ini
log/: latest_build
src/action_interface/: CMakeLists.txt
src/cw_serv/: CMakeLists.txt
src/cw_serv/include/cw_serv/actions/: ActionClient.hpp  ActionServer.hpp
src/cw_serv/include/cw_serv/cw_structs/: Command.hpp
src/cw_serv/include/cw_serv/modules/: Logger.hpp  Module.hpp  TCPServer.hpp
src/cw_serv/include/cw_serv/modules/ServerParts/: ClientManager.hpp  Packet.hpp  TCPClient.hpp
src/cw_serv/logs/: cw_log 20-11-23 18-12-45.txt
src/cw_serv/src/: main.cpp
src/cw_serv/src/actions/: ActionClient.cpp  ActionServer.cpp
src/cw_serv/src/cw_structs/: Command.cpp
src/cw_serv/src/modules/: Logger.cpp  Module.cpp  TCPServer.cpp
src/cw_serv/src/modules/ServerParts/: ClientManager.cpp  Packet.cpp  TCPClient.cpp
